--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,4 @@ services:
             dockerfile: Dockerfile
         ports: 
             - "3000:3000"
-        command: ["pipenv", "run", "uvicorn", "fastapi_scaffolding.main:app", "--host=0.0.0.0", "--port=3000", "--workers=10"]
-        # volumes: 
-        #     - ./app1:/app
+        command: ["pipenv", "run", "uvicorn", "app.main:app", "--host=0.0.0.0", "--port=3000", "--workers=10"]
